# cadical-rs

./: CMakeLists.txt  Cargo.toml  build.rs
bindings/: CMakeLists.txt  binding.cpp
src/: craig.rs  itp.rs  lib.rs  main.rs  tracer.rs
win-port/: file.cpp  terminal.cpp
