[package]
name = "satif-cadical"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "Rust wrapper for the CaDiCaL SAT solver"
repository = "https://github.com/gipsyh/cadical-rs"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logic-form = { path = "../logic-form", version = "0.3.0" }
satif = { path = "../satif", version = "0.1.4" }
aig = { path = "../aig-rs", version = "0.2.9" }
giputils = { path = "../giputils", version = "0.2.6" }

[build-dependencies]
cmake = "0.1.50"
giputils = { path = "../giputils", version = "0.2.6" }
